Move the labels from node.Status to node.Config
* drop useless node.Node.Labels()
* log san paths and labels changes
* don't log icfg refreshs at info level (flooding logs)
