# daemon/api/unstructured.go
@@ -118,6 +118,7 @@ func (t Node) Unstructured() map[string]any {
 func (t *NodeConfig) Unstructured() map[string]any {
 	return map[string]any{
 		"env":                      t.Env,
+		"labels":                   t.Labels,
 		"maintenance_grace_period": t.MaintenanceGracePeriod,
 		"min_avail_mem_pct":        t.MinAvailMemPct,
 		"min_avail_swap_pct":       t.MinAvailSwapPct,
@@ -140,7 +141,6 @@ func (t *NodeStatus) Unstructured() map[string]any {
 		"gen":           t.Gen,
 		"is_leader":     t.IsLeader,
 		"is_overloaded": t.IsOverloaded,
-		"labels":        t.Labels,
 	}
 }
 
